@@ -1,4 +1,10 @@
 ChangeLog
+
+20100529 - [matthew]
+                * Only copy /lib/udev/devices/null, as Udev >= 155 copies
+                  devices from /lib/udev/devices to /dev itself.
+                  Udevd still needs /dev/null present before starting up though.
+
 20100529 - [dj] * Sync to LFS-Bootscirpts-20100529
                 * Add test if /dev is already mounted in udev script.
                 * Added --action=add to udevadmin trigger lines of udev script.
